data/all_generated_tests/raw_wast_tests/block_TypeMismatchinControlFlowInstructions_2562.wast
;; 3. **Test Description**:    Create a `block` that references a `valtype?` but includes instructions producing a different type, ensuring that the discrepancy is caught by the type checker.    **Constraint:** Checking if the instructions within the block conform to the expected type.    **Relation to Type Mismatch:** Examines adherence to stack type requirements within the control flow.

(assert_invalid
  (module (func $type-check-valtype-mismatch
    (block (result i32) (f64.const 1.0) (br 0))
  ))
  "type mismatch"
)